--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-
+<h2 style="color: white;">Oscar Sanabria</h2>
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
